# realpars

./: .gitignore  README.MD  dagster_cloud.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: branch_deployments.yml  dagster-cloud-deploy.yml  deploy.yml
airbyte_connectors/: source_course_completions.yaml  source_course_lesson_completed.yaml  source_events_and_events_attendees.yaml  source_post_comment_liked.yaml  source_post_comments_created.yaml  source_post_liked.yaml
configs/: config.py
dagster_project/: .env.example  QUICK_START.md  README.md  __init__.py  definitions.py
dagster_project/assets/: __init__.py  airbyte_assets.py  dbt_assets.py  make_dot_com_trigger.py
dagster_project/jobs/: __init__.py  weekly_and_monthly_email_report_job.py
dagster_project/resources/: __init__.py  airbyte_resources.py  dbt_resource.py
dbt/realpars_community/: dbt_project.yml  load_managers_csv.py  profiles.yml  run_dbt.py  test_incremental_engagement.py
dbt/realpars_community/macros/: generate_schema_name.sql
dbt/realpars_community/models/staging/: _raw_data_sources.yml  clean_comments.sql  clean_communtity_members_table.sql  clean_course_lesson_completed_table.sql  clean_courses_completed_table.sql  clean_events_attendees_table.sql  clean_events_list_table.sql  clean_managers_not_joined_table.sql  clean_member_tags_stg.sql  clean_post_comment_liked_table.sql  clean_post_comments_table.sql  clean_post_liked_table.sql  (+1 more)
etl_realpars/extract/: extract_data.py
make.com/: email_weekly_team_engagement_report.html  pdfmonkey_pdf_report_template.html
(+18 files in other folders)
